fix mini hub z-index

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5357,7 +5357,7 @@ header {
     right: 0;
     background-color: white;
     overflow: hidden;
-    z-index: 50;
+    z-index: 800;
     -webkit-box-shadow: 0px 0px 7px 1px rgba(0, 0, 0, 0.5);
     -moz-box-shadow: 0px 0px 7px 1px rgba(0, 0, 0, 0.5);
     -ms-box-shadow: 0px 0px 7px 1px rgba(0, 0, 0, 0.5);
