--- a/public/assets/scss/layout/_header.scss
+++ b/public/assets/scss/layout/_header.scss
@@ -88,8 +88,8 @@ header {
             top: 100%;
             right: 0;
             background-color: white;
-            overflow: hidden;
-            z-index: 50;
+            overflow: hidden; 
+            z-index: 800;
             @include box-shadow(0px 0px 7px 1px rgba(0, 0, 0, 0.5));
             @include rounded(15px);
             .hidden-box-hub {
